crates/pg_syntax/tests/snapshots/postgres_regress/jsonpath@37.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select '$.g ? (@.a == 1 && @.a == 4)'::jsonpath;"
---
SelectStmt@0..48
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..47
    TypeCast@7..47
      AConst@7..37
        Sconst@7..37 "'$.g ? (@.a == 1 && @ ..."
      Typecast@37..39 "::"
      TypeName@39..47
        Ident@39..47 "jsonpath"
  Ascii59@47..48 ";"

