crates/pg_syntax/tests/snapshots/postgres_regress/jsonpath@38.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select '$.g ? (@.a == 1 || @.a == 4 && @.b == 7)'::jsonpath;"
---
SelectStmt@0..60
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..59
    TypeCast@7..59
      AConst@7..49
        Sconst@7..49 "'$.g ? (@.a == 1 || @ ..."
      Typecast@49..51 "::"
      TypeName@51..59
        Ident@51..59 "jsonpath"
  Ascii59@59..60 ";"

