crates/pg_syntax/tests/snapshots/postgres_regress/jsonpath@39.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select '$.g ? (@.a == 1 || !(@.a == 4) && @.b == 7)'::jsonpath;"
---
SelectStmt@0..63
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..62
    TypeCast@7..62
      AConst@7..52
        Sconst@7..52 "'$.g ? (@.a == 1 || ! ..."
      Typecast@52..54 "::"
      TypeName@54..62
        Ident@54..62 "jsonpath"
  Ascii59@62..63 ";"

