crates/pg_syntax/tests/snapshots/postgres_regress/jsonpath@40.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select '$.g ? (@.a == 1 || !(@.x >= 123 || @.a == 4) && @.b == 7)'::jsonpath;"
---
SelectStmt@0..77
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..76
    TypeCast@7..76
      AConst@7..66
        Sconst@7..66 "'$.g ? (@.a == 1 || ! ..."
      Typecast@66..68 "::"
      TypeName@68..76
        Ident@68..76 "jsonpath"
  Ascii59@76..77 ";"

